<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.RegistrationScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:hint="@string/hint_edittext_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_note_email" />

        <EditText
            android:id="@+id/edittext_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:drawableEnd="@drawable/ic_baseline_smartphone_24"
            android:hint="@string/hint_edittext_full_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edittext_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:hint="@string/hint_edittext_mobile_number"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/hint_edittext_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edittext_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/hint_edittext_confirm_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/button_text_register"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>